fixed issue with table scroll being overlapped by filter box and paginator

--- a/src/app/components/data-hub/data-hub.component.scss
+++ b/src/app/components/data-hub/data-hub.component.scss
@@ -3,6 +3,9 @@
 .wrapper{
     width: 100%;
 }
+::ng-deep .mat-tab-body-wrapper{
+    height: 100%!important;
+}
 
 .data-view{
     width: 90%;
