--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -3,7 +3,7 @@
 $panels-height: 82vh;
 $testing: false;
 
-$primary: map-get($gsc-indigo, 800);
+$primary: map-get($gsc-indigo, 700);
 
 // (x-component) BREAKPOINTS
 
